--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
   <nav>
@@ -20,16 +22,16 @@
     </header>
     <main>
       <section>
-        <h2 id="about">about</h2>
+        <h2 class="title" id="about">about</h2>
         <img src="https://fr.freepik.com/vecteurs-libre/illustration-du-concept-medias-sociaux_2808108.htm#query=informatique&position=1&from_view=keyword&track=sph" alt="image"></img>
         <img src="https://img.freepik.com/vecteurs-libre/ecrans-appareils-electroniques-isometriques_23-2147647441.jpg" alt="image">
       </section>
       <section>
-        <h2 id="work">work</h2>
+        <h2 class="title" id="work">work</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam quasi cupiditate sapiente doloremque nobis nostrum quos autem suscipit perferendis quis! Quas inventore amet unde! Corrupti, quisquam aspernatur! Assumenda, sunt ad numquam molestiae, ipsam, eveniet ratione a tempore ut quasi facere natus. At sapiente eveniet esse facere excepturi quasi a dolore tenetur ipsam atque. Provident perferendis fugiat sed laborum officia velit facere, repellendus beatae ipsa sint cupiditate odit cumque nihil minus eligendi ipsum error. Perferendis accusamus dicta libero ad magni dolor error nesciunt provident aliquam at. Et harum mollitia animi quae rerum fuga expedita hic nesciunt, blanditiis earum quis? Explicabo, et.</p>
       </section>
       <section>
-        <h2 id="members">members</h2>
+        <h2 class="title" id="members">members</h2>
         <table border="1">
           <tr>
             <th>name</th>
@@ -59,14 +61,14 @@
     
       </section>
       <section>
-        <h2 id="resume">resume</h2>
+        <h2 class="title" id="resume">resume</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/salY_Sm6mv4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </section>
 
     </main>
     <footer>
       <section>
-        <h2 id="contact">contact</h2>
+        <h2 class="title" id="contact">contact</h2>
         <a href="https://www.facebook.com/Tunisianet.com.tn/">facebook</a>
         <br>
         <a href="https://www.instagram.com/tunisianet/?hl=en">instagram</a>
